# rust-wasm

./: .gitignore  README.md
.devcontainer/: .devcontainer  Dockerfile  devcontainer.json
examples/dapr/: docker-compose.yml
examples/dapr/db/: init.sql
examples/dapr/image-grayscale/: Dockerfile  README.md
examples/function/fibonnaci/: Cargo.toml  Dockerfile  README.md
examples/function/fibonnaci/src/: lib.rs
examples/functions/fibonnaci/src/: lib.rs
examples/http/image-grayscale/: Cargo.toml  README.md
examples/http/image-grayscale/src/: main.rs
examples/services/: docker-compose.yml
examples/services/image-http-grayscale/: Cargo.toml
examples/services/image-http-grayscale/src/: main.rs
hello-world/: Cargo.toml
hello-world/src/: lib.rs
hello-world/web/: package-lock.json  package.json
hello-world/web/public/: hello-world.wasm
hello-world/web/src/components/: HelloWorld.vue
rust/hello-world/: Cargo.toml
test/: Cargo.toml  LICENSE_MIT
