# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Jon Hammond <jon.hammond@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.24.6"

[package.metadata]
wasm-opt = false
